[package]
name = "minecraft-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.15"
wgpu = "0.19"
env_logger = "0.11"
log = "0.4"
noise = "0.8"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crossbeam-channel = "0.5" # Thread-safe communication
# IMPORTANT: Update glam to support serialization
glam = { version = "0.24", features = ["bytemuck", "serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
rand = "0.9.2"
rodio = "0.17"
hound = "3.5"